--- a/app/views/listWanted.scala.html
+++ b/app/views/listWanted.scala.html
@@ -2,7 +2,7 @@
 @import tags._
 @main("Bämbelville") {
     <div data-role="page" id="listWanted">
-        <div data-role="inline" style="width: 800px; margin: 0 auto; position: static; text-align:center;">
+        <div data-role="inline" id="header">
             @title()
             <div data-role="navbar">
                 <ul>
