--- a/app/views/tags/list.scala.html
+++ b/app/views/tags/list.scala.html
@@ -4,7 +4,7 @@
     <li>
         <h3>@posting.subject</h3>
         <p><strong>Bli</strong></p>
-        <p>Bla</p>
+        <p>@posting.description</p>
         <p class="ui-li-aside"><strong>079 744 53 19</strong></p>
     </li>
     }
