--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -393,7 +393,7 @@ h5 {
   font-size: 12px;
 }
 h6 {
-  font-size: 11px;
+  font-size: 24px;
   color: #999999;
   text-transform: uppercase;
 }
@@ -2530,7 +2530,9 @@ input[type="submit"].btn.btn-mini {
 }
 .nav-tabs,
 .nav-pills {
-  padding-left: 60px;
+  font-size: 24px;
+  font-weight: bold;
+  padding-left: 100px;
   *zoom: 1;
 }
 .nav-tabs:before,
@@ -2562,8 +2564,8 @@ input[type="submit"].btn.btn-mini {
   margin-bottom: -1px;
 }
 .nav-tabs > li > a {
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 18px;
+  padding-bottom: 18px;
   line-height: 18px;
   border: 1px solid transparent;
   -webkit-border-radius: 4px 4px 0 0;
@@ -3954,7 +3956,7 @@ a.thumbnail:hover {
   color: #ffffff;
 }
 .hero-unit {
-  padding: 60px;
+  padding: 100px;
   margin-bottom: 30px;
   background-color: #eeeeee;
   -webkit-border-radius: 6px;
