--- a/app/views/tags/title.scala.html
+++ b/app/views/tags/title.scala.html
@@ -3,7 +3,7 @@
     <h1>Bämbelville &mdash; Geh &amp; Neh</h1>
     <p>Nachbarschaftshilfe im Dorf.</p>
     @if(showCreatePosting) {
-        <a class="btn btn-primary btn-large" href="createPosting">
+        <a class="btn btn-primary btn-large" href="@routes.Application.createPosting">
             Gratis Inserat Erfassen
         </a>
     }
