--- a/app/views/createPosting.scala.html
+++ b/app/views/createPosting.scala.html
@@ -1,4 +1,4 @@
-@(postingForm: Form[(String, String, String, String, String)])
+@(postingForm: Form[(String, String, String, String, String, String)])
 @import tags._
 @main("Bämbelville") {
     <script>
@@ -26,6 +26,20 @@
 
     <div class="offset1">
     @helper.form(action = routes.Application.newPosting) {
+        @helper.input(postingForm("category"), '_label -> "Kategorie") { (id, name, value, args) =>
+            <div class="control-group">
+                <div class="controls">
+                    <label class="radio">
+                        <input type="radio" name="@name" value="OFFERED" checked>
+                        Geh
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="@name" value="WANTED">
+                        Neh
+                    </label>
+                </div>
+            </div>
+        }
             @helper.inputText(postingForm("subject"), '_label -> "Titel", 'class -> "span6")
             @helper.textarea(postingForm("description"), '_label -> "Beschreibung", 'class -> "span6", 'rows -> "3")
             @helper.inputText(postingForm("userName"), '_label -> "Name", 'class -> "span6")
