Added posting deletion

--- a/app/views/verifyPosting.scala.html
+++ b/app/views/verifyPosting.scala.html
@@ -1,6 +1,7 @@
 @main("Bämbelville") {
     <div class="hero-unit">
         <h1>Ihr Inserat wurde aktiviert.</h1>
+        <p>Es erscheint ab sofort auf Bämbelville.</p>
         <a class="btn btn-primary btn-large" href="@routes.Application.index">
             Zur Übersicht
         </a>
